# cmake-demo

./: README.md
hello-world/: CMakeLists.txt  README.md
hello-world-test/: CMakeLists.txt  README.md  mul_integers.cpp  mul_integers.hpp  mul_integers_test.cpp  sum_integers.cpp  sum_integers.hpp  sum_integers_test.cpp
some-lib-demo-alpha/cpp/: CMakeLists.txt  README.md  adder.cpp  adder.hpp
some-lib-demo-beta/cpp/: CMakeLists.txt  adder.cpp  adder.hpp
test-some-lib-demo/cpp/: CMakeLists.txt  README.md  main.cpp
trim/: CMakeLists.txt  README.md  main.cpp
